# Task-Tracker-App

./: .cursorignore  .cursorindexingignore  .gitignore  CURSOR_PLAN.md  DEVELOPMENT_ISSUES_LOG.md  DEVELOPMENT_LOG.md  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  tray.rs
src/components/layout/: AppLayout.tsx
src/components/widget/: WidgetShell.tsx
src/context/: BootstrapContext.tsx
src/db/: connection.ts
src/pages/: Dashboard.tsx  Settings.tsx
src/routes/: RootRoute.tsx
src/store/: theme.ts
