[package]
name = "task_tracker"
version = "0.1.0"
description = "Task Tracker desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "task_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-sql = { version = "2.0.0", features = ["mysql"] }
tauri-plugin-store = "2.0.0"
tauri-plugin-log = "2.0.0"
tauri-plugin-stronghold = "2.3.1"
